--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,82 @@
+::selection {
+  color: #fd746c;
+  background-color: #2c3e50;
+}
+
+::placeholder {
+  color: #fff;
+}
+
 .App {
+  min-height: 100vh;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #2c3e50; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #fd746c, #2c3e50);
+  background: linear-gradient(to right, #fd746c, #2c3e50);
+}
+
+.auth_form_wrapper {
+  width: clamp(220px, 20vw, 15.5rem);
+  padding: 2.5rem;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.29);
+}
+
+.auth_form_wrapper,
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form > h3 {
   text-align: center;
 }
 
+form input {
+  margin: 0.5rem 0;
+  padding: 5px 7px;
+  background: transparent;
+  border: 2px solid #fff;
+  border-radius: 25px;
+}
+
+form input:focus {
+  outline: none;
+}
+
+button:not(.linkBtn) {
+  background-color: #fff;
+  color: #2c3e50;
+  font-weight: bolder;
+  margin-block: 1rem;
+  padding: 0.6rem;
+  border: none;
+  border-radius: 25px;
+}
+
+.linkBtn {
+  background: none;
+  border: none;
+  color: rgba(255, 255, 255, 0.8);
+  margin-top: 2rem;
+  text-decoration: underline;
+  transition: all 0.25s ease-in-out;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.linkBtn:hover {
+  color: #fff;
+}
+
+/* leave this just in case of future animation of the logo */
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -11,21 +86,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
