--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ form > h3 {
 form input {
   margin: 0.5rem 0;
   padding: 5px 7px;
+  color: #fff;
   background: transparent;
   border: 2px solid #fff;
   border-radius: 25px;
